<resources>
    <string name="app_name">My Dialer App</string>
    <string name="bt_1">Open Dialer Explicitly</string>
    <string name="bt_2">Open Dialer Implicitly</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="asterick">*</string>
    <string name="hash">#</string>
    <string name="back">del</string>
</resources>
